welcome.lessons.welcome.summative.Moria.scala.code
droite();droite()
while(!estFaceMur){
  avance()
  if(estSurBiscuit){
    prendBiscuit()
    do{
      recule()
    } while(!estSurBiscuit){
      avance()
      poseBiscuit()
    }
    
    
    if(!estSurBiscuit){
      avance()
     
      
    }
  }
  }
if(estFaceMur){
  droite()
  avance()
  gauche()
  avance()
}

